# meson

./: mesontest.py  run_project_tests.py  run_unittests.py  setup.py
docs/markdown/: Reference-manual.md
mesonbuild/: build.py  environment.py  interpreter.py  mesonmain.py  mparser.py
mesonbuild/backend/: backends.py  ninjabackend.py
mesonbuild/cargo/: builder.py  cfg.py  cfg_test.py  interpreter.py  manifest.py  version.py  version_test.py
mesonbuild/dependencies/: __init__.py  base.py
mesonbuild/interpreter/: dependencyfallbacks.py  interpreter.py  interpreterobjects.py
mesonbuild/modules/: __init__.py  gnome.py  hotdoc.py  pkgconfig.py  rust.py
mesonbuild/scripts/: hotdochelper.py  meson_test.py
mesonbuild/wrap/: wrap.py
test cases/cargo/01 basic/subprojects/sub/: Cargo.toml
test cases/cargo/02 sub cargo/: meson.build
test cases/cargo/02 sub cargo/subprojects/sub/: Cargo.toml
test cases/cargo/02 sub cargo/subprojects/sub2/: Cargo.toml
test cases/cargo/02 sub cargo/subprojects/sub2/src/: lib.rs
test cases/cargo/03 project workspace/: meson.build
test cases/cargo/03 project workspace/subprojects/sub/: Cargo.toml
test cases/cargo/04 virtual workspace/: main2.rs  meson.build
test cases/cargo/04 virtual workspace/subprojects/sub/: Cargo.toml
test cases/cargo/05 some lib definitions/: meson.build
test cases/cargo/05 some lib definitions/subprojects/sub/: Cargo.toml
test cases/common/117 subproject subproject target/: meson.build
test cases/common/117 subproject subproject target/subprojects/a/: a.c  meson.build
test cases/common/117 subproject subproject target/subprojects/b/: b.c  genh.py  meson.build
test cases/common/156 reintrant subproject/: meson.build
test cases/common/156 reintrant subproject/subprojects/a/: a.c  meson.build
test cases/common/159 components/: installed_files.txt
test cases/common/278 whole static/: meson.build  testmeson.c  testmesonlib.c
test cases/common/48 test args/: meson.build
test cases/frameworks/14 hotdoc/: meson.build
test cases/frameworks/14 hotdoc/doc/: meson.build
test cases/frameworks/23 hotdoc/doc/: meson.build
test cases/frameworks/23 hotdoc/subprojects/: mesongir
(+4 files in other folders)
